--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,8 @@ services:
   - type: web
     name: conteo-inventario
     env: python
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn inventario_project.wsgi:application"
-    preDeployCommand: "python manage.py collectstatic --noinput"
-    envVars:
-      - key: DJANGO_SETTINGS_MODULE
-        value: inventario_project.settings
+    buildCommand: |
+      pip install -r requirements.txt
+      python manage.py collectstatic --noinput
+      python manage.py migrate
+    startCommand: gunicorn inventario_project.wsgi:application
