--- a/render.yaml
+++ b/render.yaml
@@ -6,16 +6,19 @@ services:
       echo "=== INSTALANDO DEPENDENCIAS ==="
       pip install -r requirements.txt
 
-      echo "=== EJECUTANDO COLLECTSTATIC ==="
+      echo "=== COLLECTSTATIC ==="
       python manage.py collectstatic --noinput --verbosity=2
 
-      echo "=== FAKE MIGRATION: apps base ==="
-      python manage.py migrate contenttypes --fake
-      python manage.py migrate auth --fake
-      python manage.py migrate admin --fake
-      python manage.py migrate sessions --fake
+      echo "=== FAKING SYSTEM MIGRATIONS ==="
+      python manage.py migrate contenttypes 0001_initial --fake
+      python manage.py migrate auth 0001_initial --fake
+      python manage.py migrate admin 0001_initial --fake
+      python manage.py migrate sessions 0001_initial --fake
 
-      echo "=== FAKE INITIAL: inventario ==="
+      echo "=== MARCANDO MIGRACIONES MANUALMENTE ==="
+      python manage.py migrate --fake
+
+      echo "=== MIGRANDO APP INVENTARIO (si hace falta) ==="
       python manage.py migrate inventario --fake-initial
 
     startCommand: gunicorn inventario_project.wsgi:application
