--- a/render.yaml
+++ b/render.yaml
@@ -9,16 +9,16 @@ services:
       echo "=== COLLECTSTATIC ==="
       python manage.py collectstatic --noinput --verbosity=2
 
-      echo "=== FAKING SYSTEM MIGRATIONS ==="
+      echo "=== MARCANDO MIGRACIONES DEL SISTEMA COMO APLICADAS ==="
       python manage.py migrate contenttypes 0001_initial --fake
       python manage.py migrate auth 0001_initial --fake
       python manage.py migrate admin 0001_initial --fake
       python manage.py migrate sessions 0001_initial --fake
 
-      echo "=== MARCANDO MIGRACIONES MANUALMENTE ==="
+      echo "=== MIGRACIONES RESTANTES MARCADAS COMO APLICADAS ==="
       python manage.py migrate --fake
 
-      echo "=== MIGRANDO APP INVENTARIO (si hace falta) ==="
+      echo "=== MIGRANDO APP INVENTARIO DE FORMA SEGURA ==="
       python manage.py migrate inventario --fake-initial
 
     startCommand: gunicorn inventario_project.wsgi:application
