--- a/render.yaml
+++ b/render.yaml
@@ -9,17 +9,8 @@ services:
       echo "=== COLLECTSTATIC ==="
       python manage.py collectstatic --noinput --verbosity=2
 
-      echo "=== MARCANDO MIGRACIONES DEL SISTEMA COMO APLICADAS ==="
-      python manage.py migrate contenttypes 0001_initial --fake
-      python manage.py migrate auth 0001_initial --fake
-      python manage.py migrate admin 0001_initial --fake
-      python manage.py migrate sessions 0001_initial --fake
-
-      echo "=== MIGRACIONES RESTANTES MARCADAS COMO APLICADAS ==="
-      python manage.py migrate --fake
-
-      echo "=== MIGRANDO APP INVENTARIO DE FORMA SEGURA ==="
-      python manage.py migrate inventario --fake-initial
+      echo "=== APLICANDO MIGRACIONES ==="
+      python manage.py migrate --fake-initial
 
     startCommand: gunicorn inventario_project.wsgi:application
     envVars:
