--- a/render.yaml
+++ b/render.yaml
@@ -6,23 +6,22 @@ services:
       echo "=== INSTALANDO DEPENDENCIAS ==="
       pip install -r requirements.txt
 
-      echo "=== STATIC ==="
+      echo "=== COLECTANDO ARCHIVOS ESTÁTICOS ==="
       python manage.py collectstatic --noinput --verbosity=2
 
-      echo "=== MIGRACIONES SISTEMA COMO FAKE INITIAL ==="
+      echo "=== MARCANDO MIGRACIONES DEL SISTEMA COMO FAKE ==="
       python manage.py migrate contenttypes 0001_initial --fake
       python manage.py migrate auth 0001_initial --fake
       python manage.py migrate admin 0001_initial --fake
       python manage.py migrate sessions 0001_initial --fake
 
-      echo "=== MARCAR MIGRACIONES POSTERIORES DEL SISTEMA ==="
-      python manage.py migrate --fake
-
-      echo "=== MARCAR 0001 de INVENTARIO COMO FAKE ==="
+      echo "=== MARCANDO MIGRACIONES DE LA APP INVENTARIO COMO FAKE ==="
       python manage.py migrate inventario 0001_initial --fake
+      python manage.py migrate inventario 0002_inventario --fake
+      python manage.py migrate inventario 0003_alter_conteo_lote --fake
 
-      echo "=== MARCAR TODAS LAS DEMÁS MIGRACIONES DE INVENTARIO COMO FAKE ==="
-      python manage.py migrate inventario --fake
+      echo "=== MARCANDO TODO COMO APLICADO ==="
+      python manage.py migrate --fake
 
     startCommand: gunicorn inventario_project.wsgi:application
     envVars:
