--- a/render.yaml
+++ b/render.yaml
@@ -3,24 +3,13 @@ services:
     name: conteo-inventario
     env: python
     buildCommand: |
-      echo "=== INSTALANDO DEPENDENCIAS ==="
+      echo "=== Instalando dependencias ==="
       pip install -r requirements.txt
 
-      echo "=== COLECTANDO ARCHIVOS ESTÁTICOS ==="
-      python manage.py collectstatic --noinput --verbosity=2
+      echo "=== Recopilando archivos estáticos ==="
+      python manage.py collectstatic --noinput
 
-      echo "=== MARCANDO MIGRACIONES DEL SISTEMA COMO FAKE ==="
-      python manage.py migrate contenttypes 0001_initial --fake
-      python manage.py migrate auth 0001_initial --fake
-      python manage.py migrate admin 0001_initial --fake
-      python manage.py migrate sessions 0001_initial --fake
-
-      echo "=== MARCANDO MIGRACIONES DE LA APP INVENTARIO COMO FAKE ==="
-      python manage.py migrate inventario 0001_initial --fake
-      python manage.py migrate inventario 0002_inventario --fake
-      python manage.py migrate inventario 0003_alter_conteo_lote --fake
-
-      echo "=== MARCANDO TODO COMO APLICADO ==="
+      echo "=== Marcando migraciones como aplicadas (FAKE) ==="
       python manage.py migrate --fake
 
     startCommand: gunicorn inventario_project.wsgi:application
